emart-manifests/client/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: emart
  labels:
    app: client
spec:
  selector:
    matchLabels:
      app: client
  replicas: 1
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: 532739883212.dkr.ecr.us-east-1.amazonaws.com/client:2
        imagePullPolicy: Always
        ports:
        - containerPort: 4200
          name: client-port
