emart-manifests/client/service.yaml
# Frontend Client Service
apiVersion: v1
kind: Service
metadata:
  name: client-svc
  namespace: emart
spec:
  type: NodePort
  selector:
    app: client
  ports:
  - port: 4200
 

# apiVersion: v1
# kind: Service
# metadata:
#   name: client-svc
#   namespace: emart
# spec:
#   type: LoadBalancer  # Changed from ClusterIP to LoadBalancer
#   selector:
#     app: client
#   ports:
#   - port: 80
#     targetPort: 4200
