emart-manifests/client/kingress.yml
# Ingress for frontend
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend
  namespace: emart   # Add the 'namespace' field here
  labels:
    name: client
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: "/"
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: /home
        backend:
          service:
            name: client-svc
            port:
              number: 4200
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: api-svc
            port:
              number: 5000
      - pathType: Prefix
        path: "/webapi"
        backend:
          service:
            name: webapi-svc
            port:
              number: 9000
